cambios visuales en listados, login y dashboards

--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -120,4 +120,12 @@
 
 <div ui-view="contenido@"></div>
 
+<section>
+    <div class="footer_h">
+        <div class="contenido">
+            <p>Derechos reservados 2017 Toroide Laboral</p>
 
+        </div>
+
+    </div>
+</section>
