--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -55,7 +55,7 @@
             </md-menu>
         </li>
 
-        <li>
+        <!--<li>
             <md-menu>
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
                     <notification-icon animation="grow" count="1">
@@ -68,7 +68,7 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-        </li>
+        </li>-->
         <li>
             <md-menu>
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
@@ -93,3 +93,12 @@
 <!--<aside ui-view="menu@"></aside>-->
 
 <section ui-view="contenido@"></section>
+<section>
+    <div class="footer_h">
+        <div class="contenido">
+            <p>Derechos reservados 2017 Toroide Laboral</p>
+
+        </div>
+
+    </div>
+</section>
