--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
@@ -1,7 +1,7 @@
 ﻿<div class="p_info">
     <img src="img/perfil.jpg" alt="">
     <div class="t_info">
-        <h5>bienvenido</h5>
+        <h5>Bienvenido</h5>
         <h2><a ui-sref="profesional.perfil">{{authentication.userName}}</a></h2>
     </div>
 </div>
