--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaMenu.html
@@ -1,7 +1,7 @@
    <div class="p_info">
         <img src="img/oc.jpg" alt="">
         <div class="t_info">
-        <h5>bienvenido</h5>
+        <h5>Bienvenido</h5>
 <h2><a>{{authentication.userName}}</a></h2>
     </div>
 </div>
