--- a/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
@@ -1,58 +1,10 @@
-﻿<main>
-    <md-container flex>
-        <md-content layout="row" layout-align="center center">
-
-            <div flex="70" layout="column" class="ofertas_p" style="margin:2em 0;">
-
-                <div class="t_ofer_p" layout="column" layout-align="start center">
-                    <h1>{{ofertaDetalle.Nombre}}</h1>
-                    <h3>{{ofertaDetalle.Detalle}}</h3>
-                    <div class="fechas" layout="row" layout-align="space-around center">
-                        <h2>FECHA DE INICIO: <span class="icon-calendar icon-fecha"></span> {{ofertaDetalle.FechaInicioConvocatoria |  date:'dd/MM/yyyy'}}</h2>
-                        <h2>FECHA DE FIN: <span class="icon-calendar icon-fecha"></span> {{ofertaDetalle.FechaFinConvocatoria |  date:'dd/MM/yyyy'}}</h2>
-                    </div>
-                </div>
-
-                <hr class="h_op" flex="100">
-                <div class="emp_d" layout="row" layout-align="space-around center">
-                    <img src="img/logo.png">
-
-                    <div class="emp_desc_ofer" layout="column" flex="70">                        
-                        <h1><a ui-sref="profesional.empresa({idEmpresa: ofertaDetalle.Empresa.Id})" ng-show="usuarioLogueado.isProfesional">{{ofertaDetalle.Empresa.NombreFantasia}}</a></h1>
-                        <h4>{{ofertaDetalle.Empresa.Descripcion}}</h4>
-                    </div>
-                </div>
-
-                <hr class="h_op" flex="100" />
-
-                <div latout="column" layout-align="space-around center" flex>
-                    <h1><span style="font-weight:700;">Etapas</span></h1>
-                    <br />
-                    <timeline>
-                        <timeline-event ng-repeat="etapa in ofertaDetalle.EtapasOferta" side="alternate">
-                            <!--<timeline-badge >
-                <i class="glyphicon {{event.badgeIconClass}}"></i>
-            </timeline-badge>-->
-                            <timeline-panel class="{{event.badgeClass}}">
-                                <timeline-heading>
-                                    <div class="flag-wrapper">
-                                        <span class="flag">{{etapa.TipoEtapa.Nombre}}</span>
-                                        <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
-                                    </div>
-                                </timeline-heading>
-                                <div class="desc">
-                                    <p>{{etapa.TipoEtapa.Descripcion}}</p>
-                                    <a ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapa.Id, NombreOferta: ofertaDetalle.Nombre})" ng-show="usuarioLogueado.isEmpresa">Detalle</a>
-                                </div>
-                            </timeline-panel>
-                        </timeline-event>
-                    </timeline>                    
-                </div>
-                <hr class="h_sop">
-
+﻿<div layout="row" flex>
+    <div flex="30">
+        <md-card>
+            <md-card-content>
                 <div class="puestos">
                     <h1><span style="font-weight:700;">Puestos</span> disponibles.</h1>
-                    <div ng-repeat="puesto in ofertaDetalle.Puestos" class="puestos_box" layout="column" layout-align="space-around center" flex="70">
+                    <div ng-repeat="puesto in ofertaDetalle.Puestos" class="puestos_box" layout="column" layout-align="space-around center" flex="100">
                         <h2>{{puesto.Nombre}}</h2>
                         <h3>{{puesto.Descripcion}}</h3>
                         <div class="p_items" layout="column" layout-align="space-around start">
@@ -63,13 +15,70 @@
                             <h4 ng-repeat="sr in puestos.Subrubros"><span class="p_res">SUB-RUBROS:</span> <span class="etiquetas">{{sr.Nombre}}</span></h4>
                             <h4><span class="p_res">TIPO DE CONTRATO:</span> <i>{{puesto.TipoContrato.Nombre}}</i></h4>
                             <h4><span class="p_res">DISPONIBILIDAD:</span> {{puesto.Disponibilidad.Nombre}}</h4>
-                            <md-button class="md-raised md-primary" style="margin:auto; background:rgb(62, 138, 187);" ng-click="postularProfesional(puesto)" ng-show="usuarioLogueado.isProfesional">Postularse</md-button>
+                            <md-button class="md-raised md-primary" style="margin:auto; background: #0c964d;" ng-click="postularProfesional(puesto)" ng-show="usuarioLogueado.isProfesional">Postularse</md-button>
                         </div>
                     </div>
                 </div>
-            </div>
+            </md-card-content>
+        </md-card>
+    </div>
+    
+
+    <div flex="50">
+        <md-card>
+            <md-card-content>
+                <div flex layout="column" class="ofertas_p">
+
+                    <div class="t_ofer_p" layout="column" layout-align="start center">
+                        <h1>{{ofertaDetalle.Nombre}}</h1>
+                        <h3>{{ofertaDetalle.Descripcion}}</h3>
+                        <div class="fechas" layout="row" layout-align="space-around center">
+                            <h2>FECHA DE INICIO: <span class="icon-calendar icon-fecha"></span> {{ofertaDetalle.FechaInicioConvocatoria |  date:'dd/MM/yyyy'}}</h2>
+                            <h2>FECHA DE FIN: <span class="icon-calendar icon-fecha"></span> {{ofertaDetalle.FechaFinConvocatoria |  date:'dd/MM/yyyy'}}</h2>
+                        </div>
+                    </div>
+
+                    <hr class="h_op" flex="100">
+                    <div class="emp_d" layout="row" layout-align="space-around center">
+                        <img src="img/logo.png">
+
+                        <div class="emp_desc_ofer" layout="column" flex="70">
+                            <h1><a ui-sref="profesional.empresa({idEmpresa: ofertaDetalle.Empresa.Id})" ng-show="usuarioLogueado.isProfesional">{{ofertaDetalle.Empresa.RazonSocial}}</a></h1>
+                            <h4>{{ofertaDetalle.Empresa.Descripcion}}</h4>
+                        </div>
+                    </div>
+
+                    <hr class="h_op" flex="100" />
+
+                    <div latout="column" layout-align="space-around center" flex>
+                        <h1><span style="font-weight:700;">Etapas</span></h1>
+                        <br />
+                        <timeline>
+                            <timeline-event ng-repeat="etapa in ofertaDetalle.EtapasOferta" side="alternate">
+                                <!--<timeline-badge >
+                                <i class="glyphicon {{event.badgeIconClass}}"></i>
+                            </timeline-badge>-->
+                                <timeline-panel class="{{event.badgeClass}}">
+                                    <timeline-heading>
+                                        <div class="flag-wrapper">
+                                            <span class="flag">{{etapa.TipoEtapa.Nombre}}</span>
+                                            <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+                                        </div>
+                                    </timeline-heading>
+                                    <div class="desc">
+                                        <p>{{etapa.TipoEtapa.Descripcion}}</p>
+                                        <a ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapa.Id, NombreOferta: ofertaDetalle.Nombre})" ng-show="usuarioLogueado.isEmpresa">Detalle</a>
+                                    </div>
+                                </timeline-panel>
+                            </timeline-event>
+                        </timeline>
+                    </div>
+                    <hr class="h_sop">
 
 
-        </md-content>
-    </md-container>
-</main>
+                </div>
+            </md-card-content>
+        </md-card>
+    </div>
+    
+</div>
