--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -1,119 +1,167 @@
 ﻿<md-container>      
         <!-- COMIENZO SECCION LISTA DE OFERTAS -->
 
-        <div class="t_list">
-            <h1>Listado de ofertas disponibles</h1>
+    <div class="t_list" ng-show="usuarioLogueado.isProfesional">
+        <h1>Listado de ofertas disponibles</h1>
 
-        </div>
+    </div>
+    <div class="t_list" ng-show="usuarioLogueado.isEmpresa">
+        <h1>Mis ofertas</h1>
+    </div>
 
         <section class="ofertas">
-            <div class="sidebar">
-                <div ng-repeat="(tipoFiltro,valoresFiltro) in opcionesFiltrosOfertas.options.selectableFilters">                    
-                    <h3>{{tipoFiltro}}  </h3>
-                    <ul ng-repeat="valorFiltro in valoresFiltro">
-                        <li>
-                            <md-checkbox ng-click="setSelectedOfertas(tipoFiltro, valorFiltro)" 
-                                         ng-checked="queryFiltros[tipoFiltro] && queryFiltros[tipoFiltro].indexOf(valorFiltro.Id.toString()) >= 0">
-                                {{valorFiltro.Descripcion}} ({{valorFiltro.Cantidad}})
-                            </md-checkbox>
-                        </li>                        
-                    </ul>
-                </div>                
-
-                <div>
-                    <h3>Buscar por Nombre:</h3>
-                    <ul>
-                        <li>
-                            <div layout="row">
-                                <md-input-container flex class="md-icon-float md-block md-title">
-                                    <label>Oferta</label>
-                                    <input type="text" ng-model="nombreOferta">
-                                </md-input-container>
+            <div layout="row">
+                <md-card>
+                    <md-card-content>
+                        
+                        <div class="sidebar">
+                            <div>
+                                <h3>Buscar por Nombre:</h3>
+                                <ul>
+                                    <li>
+                                        <div layout="row">
+                                            <md-input-container flex class="md-icon-float md-block md-title">
+                                                <label>Oferta</label>
+                                                <input type="text" ng-model="nombreOferta">
+                                            </md-input-container>
+                                        </div>
+                                        <div layout="row">
+                                            <md-button class="md-raised" flex ng-click="busquedaNombreOferta(nombreOferta)">
+                                                Buscar
+                                                <md-icon class="material-icons">search</md-icon>
+                                            </md-button>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
-                            <div layout="row">
-                                <md-button class="md-raised" flex ng-click="busquedaNombreOferta(nombreOferta)">
-                                    Buscar
-                                    <md-icon class="material-icons">search</md-icon>
-                                </md-button>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                            <h3>Filtrar</h3>
+                            <hr />
 
-            <div class="lista">
-                <md-toolbar>
-                    <div class="md-toolbar-tools t_list">
-                        <span flex></span>
-                        <md-input-container flex="40">
-                            <label>Ordenar por:</label>
-                            <md-select ng-model="queryFiltros.orderBy" ng-change="ordenOfertasChanged()">
-                                <md-option ng-value="opt" ng-repeat="opt in opcionesFiltrosOfertas.options.orderByOptions">{{ opt }}</md-option>
-                            </md-select>
-                        </md-input-container>
-                    </div>
-                </md-toolbar>
-
-                <md-table-container>
-                    <table md-table>
-                        <thead md-head>
                             
-                        </thead>
-                        <tbody md-body>
-                            <tr md-row ng-repeat="oferta in ofertas">
-                                <td md-cell>
-                                    <article>
-                                        <div class="logo_ofer">
-                                            <img src="img/logo.png">
-                                            <h2>{{ oferta.Empresa.Nombre }}</h2>
-                                        </div>
-                                        <div class="info_ofer">
-                                            <h1>{{ oferta.Nombre }}</h1>
-                                            <hr>
-                                            <div class="d_ofer">
-                                                <h4>fecha de convocatoria: {{ oferta.FechaInicioConvocatoria  |  date:'dd/MM/yyyy' }} a {{ oferta.FechaFinConvocatoria  |  date:'dd/MM/yyyy' }}</h4>
-                                                <div ng-switch on="oferta.Publica">
-                                                    <h5 ng-switch-when="true">Pública</h5>
-                                                    <h5 ng-switch-when="false">Privada</h5>
-                                                </div>
-                                            </div>
-                                            <h3>{{ oferta.Descripcion }}</h3>
-                                            <a ui-sref="empresa.ofertas.detalleOferta({idOferta: oferta.Id})" ng-show="usuarioLogueado.isEmpresa">ver más</a>
-                                            <a ui-sref="profesional.ofertas.detalleOferta({idOferta: oferta.Id})" ng-show="usuarioLogueado.isProfesional">ver más</a>
-                                        </div>
-                                    </article>
-                                </td>                                
-                            </tr>
-                        </tbody>
-                    </table>
-                </md-table-container>
-                <md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
-                                     md-limit="queryFiltros.Rows"
-                                     md-limit-options="limitOptions"
-                                     md-page="queryFiltros.Page"
-                                     md-on-paginate="logPaginationOfertas"
-                                     md-total="{{TotalRows}}"
-                                     md-page-select></md-table-pagination>
+                            <div ng-repeat="(tipoFiltro,valoresFiltro) in opcionesFiltrosOfertas.options.selectableFilters">
+                                <h3>{{tipoFiltro}}  </h3>
+                                <ul ng-repeat="valorFiltro in valoresFiltro">
+                                    <li>
+                                        <md-checkbox ng-click="setSelectedOfertas(tipoFiltro, valorFiltro)"
+                                                     ng-checked="queryFiltros[tipoFiltro] && queryFiltros[tipoFiltro].indexOf(valorFiltro.Id.toString()) >= 0">
+                                            {{valorFiltro.Descripcion}} ({{valorFiltro.Cantidad}})
+                                        </md-checkbox>
+                                    </li>
+                                </ul>
+                            </div>
+                            
+                        </div>
+                    </md-card-content>
+                </md-card>
 
-                <!--<md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
-                                     md-limit="pagination.limit"
-                                     md-limit-options="[5, 10, 15]"
-                                     md-page="pagination.current"
-                                     md-total="{{ofertas.length}}"
-                                     md-page-select></md-table-pagination>-->
-                    
+                <md-card>
+                    <md-card-content>
+                        <div flex class="lista">
+                            <div layout="column" flex>
+                                <section class="botonesOrdenBy" flex layout="row">
+                                    <p>Ordenar por</p>
+                                    <ul>
+                                        <li>
+                                            <a ng-model="queryFiltros.orderBy" ng-value="FechaInicioConvocatoria" ng-click="ordenOfertasChanged()">
+                                                <span title="Fecha de Inicio" class="fa fa-calendar"></span>
+                                                <span>Fecha inicio</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a ng-model="queryFiltros.orderBy" ng-value="FechaFinConvocatoria" ng-click="ordenOfertasChanged()">
+                                                <span title="Fecha de Inicio" class="fa fa-calendar"></span>
+                                                <span>Fecha fin</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    
 
-                    <!--iafar: divisor de prueba-->
-                    <md-divider md-inset hide-sm ng-if="!$last"></md-divider>
-                    <md-divider hide-gt-sm ng-if="!$last"></md-divider>
-                    <!-- iafar: mensaje si no se encuentran resultados -->
-                    
-                
-                <div class="text-center text-accent animate-show" ng-show="(ofertas.length == 0)">
-                    <h4>No se encontraron ofertas</h4>
-                </div>
-                <md-divider></md-divider>
+                                    
+                                    <!--<div ng-repeat="opt in opcionesFiltrosOfertas.options.orderByOptions">
+                                        
+                                        
+                                        <a class="fa fa-calendar" ng-model="queryFiltros.orderBy" ng-value="opt" ng-click="ordenOfertasChanged()">{{opt}}</a>
+                                    </div>-->
+                                </section>
+                                
+                                
+                                <!--<md-input-container flex="100" layout="row" layout-align="end end">
+                                    
+                                    <md-select ng-model="queryFiltros.orderBy" ng-change="ordenOfertasChanged()">
+                                        <md-option ng-value="opt" ng-repeat="opt in opcionesFiltrosOfertas.options.orderByOptions">{{ opt }}</md-option>
+                                    </md-select>
+                                </md-input-container>-->
+                            </div>
+                            <md-table-container>
+                                <table md-table>
+                                    <thead md-head>
+
+                                    </thead>
+                                    <tbody md-body>
+                                        <tr md-row ng-repeat="oferta in ofertas">
+                                            <td md-cell>
+                                                <article>
+                                                    <div class="logo_ofer">
+                                                        <img src="img/logo.png">
+                                                        <h2>{{ oferta.Empresa.Nombre }}</h2>
+                                                    </div>
+                                                    <div class="info_ofer">
+                                                        <h1>{{ oferta.Nombre }}</h1>
+                                                        <hr>
+                                                        <div class="d_ofer">
+                                                            <h4>fecha de convocatoria: {{ oferta.FechaInicioConvocatoria  |  date:'dd/MM/yyyy' }} a {{ oferta.FechaFinConvocatoria  |  date:'dd/MM/yyyy' }}</h4>
+                                                            <div ng-switch on="oferta.Publica">
+                                                                <h5 ng-switch-when="true">Pública</h5>
+                                                                <h5 ng-switch-when="false">Privada</h5>
+                                                            </div>
+                                                        </div>
+                                                        <h3>{{ oferta.Descripcion }}</h3>
+                                                        <div flex layout="row" layout-align="end end">
+                                                            <a layout="row" layout-align="center center" ui-sref="empresa.ofertas.detalleOferta({idOferta: oferta.Id})" ng-show="usuarioLogueado.isEmpresa">Ver más</a>
+                                                            <a ui-sref="profesional.ofertas.detalleOferta({idOferta: oferta.Id})" ng-show="usuarioLogueado.isProfesional">ver más</a>
+                                                        </div>
+                                                        
+                                                    </div>
+                                                </article>
+                                                <md-divider></md-divider>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </md-table-container>
+                            <md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
+                                                 md-limit="queryFiltros.Rows"
+                                                 md-limit-options="limitOptions"
+                                                 md-page="queryFiltros.Page"
+                                                 md-on-paginate="logPaginationOfertas"
+                                                 md-total="{{TotalRows}}"
+                                                 md-page-select></md-table-pagination>
+
+                            <!--<md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
+                 md-limit="pagination.limit"
+                 md-limit-options="[5, 10, 15]"
+                 md-page="pagination.current"
+                 md-total="{{ofertas.length}}"
+                 md-page-select></md-table-pagination>-->
+                            <!--iafar: divisor de prueba-->
+                            <md-divider md-inset hide-sm ng-if="!$last"></md-divider>
+                            <md-divider hide-gt-sm ng-if="!$last"></md-divider>
+                            <!-- iafar: mensaje si no se encuentran resultados -->
+
+
+                            <div class="text-center text-accent animate-show" ng-show="(ofertas.length == 0)">
+                                <h4>No se encontraron ofertas</h4>
+                            </div>
+                            <md-divider></md-divider>
+
+                        </div>
+                    </md-card-content>
+                </md-card>
                 
             </div>
+            
+            
+
+            
         </section>
 </md-container>
