--- a/VLaboralWeb/App/Seguridad/Partials/registroEmpresa.html
+++ b/VLaboralWeb/App/Seguridad/Partials/registroEmpresa.html
@@ -31,8 +31,8 @@
 
             </md-input-container>
 
-            <md-button class="md-primary md-raised" style="background:rgb(62, 138, 187);" ng-click="registrarEmpresa(nuevoUser)">Registrarse</md-button>
-            
+            <!--<md-button class="md-primary md-raised enviar" style="background:#0c964d;" ng-click="">Registrarse</md-button>-->
+            <input type="submit" name="enviar" value="INGRESAR" class="enviar" ng-click="registrarEmpresa(nuevoUser)">
             <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
                 {{message}}
             </div>
