--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -26,10 +26,11 @@
                                             </md-input-container>
                                         </div>
                                         <div layout="row">
-                                            <md-button class="md-raised" flex ng-click="busquedaNombreOferta(nombreOferta)">
+                                            <input type="submit" class="enviar" name="buscar" value="Buscar" flex ng-click="busquedaNombreOferta(nombreOferta)" />
+                                            <!--<md-button class="md-raised" flex >
                                                 Buscar
-                                                <md-icon class="material-icons">search</md-icon>
-                                            </md-button>
+                                                <md-icon class="material-icons"></md-icon>
+                                            </md-button>-->
                                         </div>
                                     </li>
                                 </ul>
