--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesListEmpresa.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesListEmpresa.html
@@ -19,10 +19,11 @@
                                         </md-input-container>
                                     </div>
                                     <div layout="row">
-                                        <md-button class="md-raised" flex ng-click="busquedaNombreProfesional(nombreProfesional)">
+                                        <input type="submit" class="enviar" name="buscar" value="Buscar" flex ng-click="busquedaNombreProfesional(nombreProfesional)" />
+                                        <!--<md-button class="md-raised" flex >
                                             Buscar
                                             <md-icon class="material-icons">search</md-icon>
-                                        </md-button>
+                                        </md-button>-->
                                     </div>
                                 </li>
                             </ul>
